tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__OxygenGear-AAAAAAAAAAAAAAAAAAADNg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 822,
  "prerequisites": [
    823
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Oxygen gear is used to attach oxygen tanks to the oxygen mask. This is absolutely vital for any astronaut.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Oxygen Gear",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    823
  ],
  "rewards": [],
  "tasks": []
}
