tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__OxygenMask-AAAAAAAAAAAAAAAAAAADNw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 823,
  "prerequisites": [
    80,
    2744,
    795
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The oxygen mask is part of the system used to breathe on planets without oxygen, the others being oxygen gear and oxygen tanks.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Oxygen Mask",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    80,
    2744,
    795
  ],
  "rewards": [],
  "tasks": []
}
