tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__RecycleYourRocke-AAAAAAAAAAAAAAAAAAAFlg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1430,
  "prerequisites": [
    80,
    1433
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Why not recycle your old Tier 1 rocket to get components for your new tier 2 rocket? Put your old rocket in an arc furnace or plasma arc furnace to get back lots of materials.\n\nMake sure you don't need it anymore first!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Recycle Your Rocket and Save the Environment",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    80,
    1433
  ],
  "rewards": [],
  "tasks": []
}
