tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__RewardChoiceLoot-AAAAAAAAAAAAAAAAAAAA2g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 218,
  "optional_prerequisites": [
    214,
    217
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Don't need a personal dimension, eh? Well, then you'll probably be happy with some extra loot. Choose wisely; you can only pick one.\n\n[note]PS: The loot is lame, don't pick this one.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Reward Choice: Loot",
    "party_single_reward": false,
    "quest_logic": "XOR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
